--- a/SMTN-017.tex
+++ b/SMTN-017.tex
@@ -23,17 +23,14 @@
 
 \input{body}
 
+
 \appendix
-% Remove this when you strart your paper
-\input{appendix}
+
 % Include all the relevant bib files.
 % https://lsst-texmf.lsst.io/lsstdoc.html#bibliographies
 \section{References} \label{sec:bib}
 \bibliographystyle{yahapj}
-\bibliography{local,lsst,lsst-dm,refs_ads,refs,books}
+\bibliography{local}
 
-% Make sure lsst-texmf/bin/generateAcronyms.py is in your path
-\section{Acronyms} \label{sec:acronyms}
-\input{acronyms.tex}
 
 \end{document}
