--- a/body.tex
+++ b/body.tex
@@ -1,5 +1,40 @@
-\section{Standard Science Metrics}
+\section{Metrics}
 
 
-xxx--Quick summary of the 
+xxx--Quick summary of the metrics used here. There are many more metrics, but these are the ones chosen to highlight since they are easy to interpret, and/or have simple limitations.
+
+
+
+\subsection{Wide Area Metics}
+
+\noindent{\bf Parallax}: A measure of the parallax precision in the best 18k square degrees of the survey (probably, the WFD area).  \\
+{\bf Proper Motion}: A measure of the proper motion precision in the best 18k square degrees of the survey (probably, the WFD area). \\
+{\bf Fast Microlensing events}: Microlensing events between 5 and 10 days in duration. \\
+{\bf Slow Microlensing events}: Microlensing events between 60 and 90 days in duration.\\
+{\bf SRD fO value}: \\
+{\bf Bright NEOs}: Fraction of with H=16 Near Earth Asteriod objects discovered. \\
+{\bf Faint NEOs}: NEO objects with H=22. \\
+{\bf TNOs}: Fraction of H=6.0 Trans Neptunian Objects discovered.  \\
+{\bf SNe}: The number of type Ia supernovae that are observed up to a redshift completeness limit. \\
+{\bf 3x2}: Figure of merit for the 3x2 correlation. Only uses i-band. \\
+{\bf Weak Lensing}: Number of visits in i-band that are suitable for weak lensing observations, includes an extinction cut. \\
+{\bf Transients, KNe}: The PrestoKNe metric. This metric generates 10,000 events. Unfortunatly, in the baseline only around 400 of the events are detected, so we exepct a run-to-run shot noise of ~5\%. The metric returns two scores ("P" and "S") which are highly correlated.  \\
+
+
+\subsection{DDF metrics}
+
+
+\subsection{Metrics we are lacking}
+
+
+
+\begin{figure}
+\plotone{plots/baseline2_radar.pdf}
+\caption{\label{baseline2_radar}}
+\end{figure}
+
+\section{Baseline Evolution}
+
+Run through the baseline sims. 
+
 
