--- a/body.tex
+++ b/body.tex
@@ -21,15 +21,23 @@
 \subsection{DDF metrics}
 
 
-\subsection{Metrics we are lacking}
-
-
-
 
 \section{Baseline Evolution}
 
 XXX--maybe add the footprint plots for the 4 relevant baselines
 
+
+\begin{figure}
+\plottwo{plots/baselines/retro_baseline_v2_0_10yrs_Count_observationStartMJD_HEAL_SkyMap.pdf}{plots/baselines/baseline_retrofoot_v2_0_10yrs_Count_observationStartMJD_HEAL_SkyMap.pdf}
+\plottwo{plots/baselines/baseline_v2_0_10yrs_Count_observationStartMJD_HEAL_SkyMap.pdf}{plots/baselines/baseline_v2_1_10yrs_Count_observationStartMJD_HEAL_SkyMap.pdf}
+\caption{Evolution of the baseline footprint.}
+\end{figure}
+
+\begin{figure}
+\plottwo{plots/baselines/retro_baseline_v2_0_10yrs_Year3_5Count_night_gt_1278_375000_and_night_lt_1643_625000_HEAL_SkyMap.pdf}{plots/baselines/baseline_retrofoot_v2_0_10yrs_Year3_5Count_night_gt_1278_375000_and_night_lt_1643_625000_HEAL_SkyMap.pdf}
+\plottwo{plots/baselines/baseline_v2_0_10yrs_Year3_5Count_night_gt_1278_375000_and_night_lt_1643_625000_HEAL_SkyMap.pdf}{plots/baselines/baseline_v2_1_10yrs_Year3_5Count_night_gt_1278_375000_and_night_lt_1643_625000_HEAL_SkyMap.pdf}
+\caption{Evolution of the baseline rolling strategy.}
+\end{figure}
 
 
 Run through the baseline sims. 
@@ -42,7 +50,7 @@ Run through the baseline sims.
 \epsscale{0.6}
 \plotone{plots/baselines_mags.pdf}
 \epsscale{1}
-\caption{ \label{fig:baseline_mags}}
+\caption{Median depths for the baseline-like simulations. \label{fig:baseline_mags}}
 \end{figure}
 
 
@@ -56,6 +64,7 @@ The latest v2.1 baseline is shallower than previous baselines. This is mainly du
 \subsection{Bluer}
 
 \begin{table}
+\caption{Relative number of visits per filter}
 \begin{tabular}{lrrrrrr}
 \toprule
 {} &   u &   g &    r &    i &   z &   y \\
@@ -103,7 +112,7 @@ Looks like we don't really have a metric that is sensitive to increasing $u$-dep
 \epsscale{0.6}
 \plotone{plots/rolling_ns.pdf}
 \epsscale{1}
-\caption{Various rolling cadence experiments. \label{fig:rolling}}
+\caption{Various rolling cadence experiments with different rolling strengths and number of rolling bands. Nothing jumps out as obviously superior to the baseline rolling strategy. \label{fig:rolling}}
 \end{figure}
 
 
@@ -111,7 +120,7 @@ Looks like we don't really have a metric that is sensitive to increasing $u$-dep
 \epsscale{0.6}
 \plotone{plots/rolling_more.pdf}
 \epsscale{1}
-\caption{Various rolling cadence experiments. \label{fig:rolling_more}}
+\caption{Comparing a run with no rolling and one with an additional season of rolling. \label{fig:rolling_more}}
 \end{figure}
 
 
@@ -133,6 +142,8 @@ Adding rolling in the bulge doesn't have any perks. We might need more bulge-spe
 
 
 Figure~\ref{fig:rolling_more} shows having no rolling has a significant impact on SNe and KNe while starting rolling early to gain an additional season of rolling gives a boost with only a slight penalty to proper motions. 
+
+{\bf Conclusion: Starting rolling early looks to be a significant improvement for some metrics with a very minor penalty for astrometry. Note that if the survey ran an additional year, the proper motion penalty would be eliminated. }
 
 
 \subsection{Presto}
@@ -196,11 +207,65 @@ virgo\_cluster:  Adding the Virgo cluster to the WFD footprint. This was such a 
 
 \subsection{Galactic Plane Runs}
 
+\begin{figure}
+\plottwo{plots/footprints/pencil_fs1_v2_1_10yrs_Count_observationStartMJD_HEAL_SkyMap.pdf}{plots/footprints/pencil_fs2_v2_1_10yrs_Count_observationStartMJD_HEAL_SkyMap.pdf}
+\plottwo{plots/footprints/plane_priority_priority0_9_pbf_v2_1_10yrs_Count_observationStartMJD_HEAL_SkyMap.pdf}{plots/footprints/plane_priority_priority0_6_pbf_v2_1_10yrs_Count_observationStartMJD_HEAL_SkyMap.pdf}
+\plottwo{plots/footprints/plane_priority_priority0_4_pbf_v2_1_10yrs_Count_observationStartMJD_HEAL_SkyMap.pdf}{plots/footprints/plane_priority_priority0_1_pbf_v2_1_10yrs_Count_observationStartMJD_HEAL_SkyMap.pdf}
+\caption{The various galactic plane footprints simulated.}
+\end{figure}
+
 We ran a variety of footprint variations requested by the community. These runs have some issues because they can make it difficult for the scheduler to identify large contiguous regions of sky to observe in blocks.
 
+\subsection{Good Seeing}
+
+
+\begin{figure}
+\plotone{plots/good_seeing.pdf}
+\caption{Observing some filters in good seeing conditions every year. }
+\end{figure}
+
+
+xxx--already trying to gather good seeing images in some filters in the baseline.
+
+\subsection{Different Standard Exposure Time}
+
+
+\begin{figure}
+\plottwo{plots/shave_shorter.pdf}{plots/shave_longer.pdf}
+\caption{Trying different exposure times for all exposures.  }
+\end{figure}
+
+
+We try standard exposure times from 20-40s.  The SNe metric seems surprisingly peaked at 30-32s for standard exposure times. 
+
+Note, the boost in the WL metric is artificial since it is based on number of observations and thus does not take into account the lower SNR of short exposures. 
+
+
+I'm not sure why proper motion and parallax benefit from shorter exposure times. Could be because the metric assumes no degeneracy between fit parameters. 
+
+\subsection{Suppress Repeat Observations}
+
+
+\begin{figure}
+\plotone{plots/no_repeat.pdf}
+\caption{Suppressing repeat visits within a night. A boost for SNe, and an unexpected boost for the KNe metric. }
+\end{figure}
+
+
+This series of runs looks at preventing more than two observations to a point within a night. As expected, this helps SNe. Unexpectedly, this also boosts the KNe transient metric. We need to check why this happens and if it is real since the KNe metric should have a 5\% scatter.
+
+
+{\bf Conclusions:  Taking steps to suppress extra repeat visits within a night seems like it could help multiple science cases.}
+
+
+\subsection{DDF Season Length}
 
 
 
+\begin{figure}
+\plotone{plots/ddf_season_length.pdf}
+\caption{Shifting from the baseline to pre-scheduled DDF observations.}
+\end{figure}
 
 \section{Metrics That Would Help}
 
