--- a/body.tex
+++ b/body.tex
@@ -24,38 +24,34 @@
 
 \section{Baseline Evolution}
 
-XXX--maybe add the footprint plots for the 4 relevant baselines
-
 
 \begin{figure}
 \plottwo{plots/baselines/retro_baseline_v2_0_10yrs_Count_observationStartMJD_HEAL_SkyMap.pdf}{plots/baselines/baseline_retrofoot_v2_0_10yrs_Count_observationStartMJD_HEAL_SkyMap.pdf}
 \plottwo{plots/baselines/baseline_v2_0_10yrs_Count_observationStartMJD_HEAL_SkyMap.pdf}{plots/baselines/baseline_v2_1_10yrs_Count_observationStartMJD_HEAL_SkyMap.pdf}
-\caption{Evolution of the baseline footprint.}
+\caption{Evolution of the baseline footprint, showing total number of visits in all filters.\label{fig:baseline_foot}}
 \end{figure}
 
 \begin{figure}
 \plottwo{plots/baselines/retro_baseline_v2_0_10yrs_Year3_5Count_night_gt_1278_375000_and_night_lt_1643_625000_HEAL_SkyMap.pdf}{plots/baselines/baseline_retrofoot_v2_0_10yrs_Year3_5Count_night_gt_1278_375000_and_night_lt_1643_625000_HEAL_SkyMap.pdf}
 \plottwo{plots/baselines/baseline_v2_0_10yrs_Year3_5Count_night_gt_1278_375000_and_night_lt_1643_625000_HEAL_SkyMap.pdf}{plots/baselines/baseline_v2_1_10yrs_Year3_5Count_night_gt_1278_375000_and_night_lt_1643_625000_HEAL_SkyMap.pdf}
-\caption{Evolution of the baseline rolling strategy.}
+\caption{Evolution of the baseline rolling strategy. \label{fig:baseline_roll}}
 \end{figure}
 
-
-Run through the baseline sims. 
 \begin{figure}
 \plottwo{plots/baseline2_radar.pdf}{plots/baseline2_radar_zoom.pdf}
-\caption{The science impact of our latest baseline simulation. \label{fig:baseline2_radar}}
+\caption{The science impact of our latest baseline simulation. Plots are the same at different zoom levels. Metric values have been normalized to the v2.1 baseline.  \label{fig:baseline2_radar}}
 \end{figure}
 
 \begin{figure}
 \epsscale{0.6}
 \plotone{plots/baselines_mags.pdf}
 \epsscale{1}
-\caption{Median depths for the baseline-like simulations. \label{fig:baseline_mags}}
+\caption{Median coadded depths for the baseline-like simulations, normalized to the v2.1 baseline. The v2.1 baseline is $\sim$0.1 mags shallower than most previous baselines, mainly due to relaxing the weight put on taking observations at low airmass. \label{fig:baseline_mags}}
 \end{figure}
 
+The baseline footprints are shown in Figure~\ref{fig:baseline_foot}, while a check on how the different baselines roll is shown in Figure~\ref{fig:baseline_roll}. Science metrics and coadded depths are in Figures~\ref{fig:baseline2_radar} and~\ref{fig:baseline_mags}
 
-The latest v2.1 baseline is shallower than previous baselines. This is mainly due to changing the footprint to expand the WFD area to XXX sq degrees. Not really sure why the 2.1 is also ~0.05 mags less than 2.0 in most filters. Was there some other throughput change or something? 
-
+{\bf Conclusions: The v2.1 baseline is a very minor change over v2.0, adding the Virgo cluster to the WFD footprint which slightly lowers the median coadded depth.}
 
 \section{v2.0 Results}
 
@@ -75,7 +71,7 @@ bluer\_indx1\_v2.0 & 3.8 & 5.2 & 10.0 & 10.0 & 9.0 & 9.5 \\
 \label{table:blue}
 \end{table}
 
-We run a few simulations where we increase the fraction of time spent in $g$\ and $r$\ filters. The relative number of observations in each filter is listed in Table~\ref{table:blue}. Figure~\ref{fig:bluer_radar} shows no major improvement for any science case. We had expected SNe could benefit from added blue observations, however, since we still heavily favor red filters in bright time, the cadence of blue observations does not change enough to help the SNe metric.
+We run a few simulations where we increase the fraction of time spent in $u$\ and $g$\ filters. The relative number of observations in each filter is listed in Table~\ref{table:blue}. Figure~\ref{fig:bluer_radar} shows no major improvement for any science case. We had expected SNe could benefit from added blue observations, however, since we still heavily favor red filters in bright time, the cadence of blue observations does not change enough to help the SNe metric. Similarly, TDEs often want more $u$\ observations, but the number added here is not sufficient to help the TDE metrics.
 
 {\bf Conclusion:  We find no major improvement in taking more blue observations, but should confirm the final filter depth distributions with a robust photo-z metric.}
 
@@ -84,7 +80,7 @@ We run a few simulations where we increase the fraction of time spent in $g$\ an
 \plotone{plots/bluer.pdf}
 \plotone{plots/bluer_mags.pdf}
 \epsscale{1}
-\caption{The science impact of shifting to bluer filters. We see no significant gains in any particular science case.\label{fig:bluer_radar}}
+\caption{The science and coadded depth impact of shifting to bluer filters. We see no significant gains in any particular science case.\label{fig:bluer_radar}}
 \end{figure}
 
 \subsection{Long $u$}
@@ -94,15 +90,15 @@ We run a few simulations where we increase the fraction of time spent in $g$\ an
 \plotone{plots/long_u.pdf}
 \plotone{plots/long_u_mags.pdf}
 \epsscale{1}
-\caption{The science impact of taking longer $u$\ observations. We see no significant gains in any particular science case.\label{fig:long_u}}
+\caption{The science and depth impact of taking longer $u$\ observations. We see no significant gains in any particular science case.\label{fig:long_u}}
 \end{figure}
 
 
-The long\_u1 run increases the $u$-band exposure time to 50s leaving the relative number of observations the same while long\_u2 increases the exposure time but decreases the total number of observations in $u$. 
+The long\_u1 run increases the $u$-band exposure time to 50s leaving the relative number of observations the same as the baseline while long\_u2 increases the exposure time but decreases the total number of observations in $u$. 
 
 Looks like we don't really have a metric that is sensitive to increasing $u$-depth. We do get a significant depth increase in $u$\ in both cases. If there is no case for the higher cadence, the long\_u2 run seems to have extra depth "for free".
 
-{\bf Conclusion:  Increasing the total time spent in $u$\ has detrimental effects to some science metrics. We currently don't see any science improvements from shifting to 50s $u$ exposures, but the final coadded depth increases and there is a small increase in the SRD fO metric.}
+{\bf Conclusion:  Increasing the total time spent in $u$\ has detrimental effects to some science metrics. We currently don't see any science improvements from shifting to 50s $u$ exposures, but the final $u$ coadded depth increases $sim$0.15 mags and there is a small increase in the SRD fO metric.}
 
 
 \subsection{Rolling}
@@ -143,6 +139,9 @@ Adding rolling in the bulge doesn't have any perks. We might need more bulge-spe
 
 Figure~\ref{fig:rolling_more} shows having no rolling has a significant impact on SNe and KNe while starting rolling early to gain an additional season of rolling gives a boost with only a slight penalty to proper motions. 
 
+xxx--TODO:  Drop in the year3.5-4.5 plots for all the rolling sims
+
+
 {\bf Conclusion: Starting rolling early looks to be a significant improvement for some metrics with a very minor penalty for astrometry. Note that if the survey ran an additional year, the proper motion penalty would be eliminated. }
 
 
@@ -150,7 +149,31 @@ Figure~\ref{fig:rolling_more} shows having no rolling has a significant impact o
 
 The presto runs look to gather 3 observations in a night on various time scales.
 
-XXX--want some depth plots of this
+The variations we try. 1) Varying the goal length of the gap between 1.5 and 4 hours, 2) taking in near pairs (g+r, r+i, i+z) or mixed pairs (g+i, r+z, i+y) 3) Try to gather triplets half the time (every-other night).
+
+\begin{figure}
+\plottwo{plots/presto_gap.pdf}{plots/presto_gaps_mags.pdf}
+\plottwo{plots/presto_gaps_mix.pdf}{plots/presto_mix_gaps_mags.pdf}
+\plottwo{plots/presto_half_gaps.pdf}{plots/presto_half_mags.pdf}
+\plottwo{plots/presto_half_mix.pdf}{plots/presto_half_mixed_mags.pdf}
+
+\caption{ Science and depth results of different simulations observing triplets in a night. Top two rows show observing triplets every night, bottom two rows show observing triplets every other night. \label{fig:presto}}
+\end{figure}
+
+
+Results for observing triplets in a night are shown in Figure~\ref{fig:presto}. As expected, the KNe transient metric benefits from observing triples. Also as expected, only triples with gaps of 3-4 hours show improvements.  
+
+Observing triples every night results in much shallower u band final coadded depth (most likely because the triples are executing in dark time, forcing u observations into gray and bright). 
+
+All the simulations gathering triples greatly reduced the number of SNe recovered. Even if triples are only attempted on half the nights, SNe, faint NEOs, and astrometry all see significant reductions in their metrics.
+
+
+xxx--need to double check what the astrometry SRD values are, the most aggressive presto runs might be bumping up against it.
+
+\begin{figure}
+\plottwo{plots/presto_sne.pdf}{plots/presto_astrom.pdf}
+\caption{The SNe and astrometry metrics for the various presto runs. \label{fig:presto_metics} }
+\end{figure}
 
 \subsection{Long Gaps}
 
@@ -158,6 +181,7 @@ The long\_gaps sims are similar to the presto runs, but are more focused on gath
 
 \subsection{Vary Galactic Plane}
 
+xxx--Varying the amount of time spent in the plane
 
 
 \subsection{Vary North Ecliptic Spur}
@@ -186,9 +210,9 @@ ToO: Observing 10 or 50 ToOs per year. Minor impact on the science metrics.
 Carina:  Observing the Carina star forming region intensely for a week per year.  Very minor impact, as expected.
 
 
-local\_gals:  
+local\_gals:  Observing local galaxies to extra depth. 
 
-multi\_short:  Taking multiple short exposures. Note this may no longer be feasible with the latest constraints.
+multi\_short:  Taking multiple short exposures. Note this may no longer be feasible with the latest constraints on shutter motions and heat generation.
 
 north\_stripe:  Adding coverage to the north. Very minor impact on most metrics, but it would probably only help us recover a handful of ToO events. And we probably want to keep the ToO chasing in the WFD area as much as possible anyway.
 
@@ -198,7 +222,7 @@ short\_exp: Covering the sky with short exposures.
 
 smc\_movie: Continuous observations of the SMC. 
 
-twilight\_neo:  Using short exposures in twilight to look for NEOs. Note this may no longer be feasible with the latest constraints on how often the shutter can move without generating too much heat. Despite 
+twilight\_neo:  Using short exposures in twilight to look for NEOs. Note this may no longer be feasible with the latest constraints on how often the shutter can move without generating too much heat. There is little to no gain in the fraction of NEOs recovered with these simulations. Need to test with a population of objects interior to Venus to see if there is actually a science case for these observations.  
 
 virgo\_cluster:  Adding the Virgo cluster to the WFD footprint. This was such a minor change that we adopted it into the v2.1 baseline.
 
@@ -271,5 +295,5 @@ This series of runs looks at preventing more than two observations to a point wi
 
 xxx--currently looking at running the photo-z metric to get more info on filter distribution in WFD and the DDFs.
 
-xxx--We have some AGN metrics, I'm not sure they show much at the moment. We may need to configure, modify them a bit to get more info.
+xxx--We have some AGN metrics, I'm not sure they show much at the moment. We may need to configure, modify them a bit to get more info. These would be good for both the WFD and DDF areas. 
 
