--- a/body.tex
+++ b/body.tex
@@ -279,7 +279,7 @@ I'm not sure why proper motion and parallax benefit from shorter exposure times.
 This series of runs looks at preventing more than two observations to a point within a night. As expected, this helps SNe. Unexpectedly, this also boosts the KNe transient metric. We need to check why this happens and if it is real since the KNe metric should have a 5\% scatter.
 
 
-{\bf Conclusions:  Taking steps to suppress extra repeat visits within a night seems like it could help multiple science cases.}
+{\bf Conclusions:  Taking steps to suppress extra repeat visits within a night seems like it could help multiple science cases. It is tough to tell if the KNe metric increase is "real", or if the v2.1 baseline is simply a $\sim 2\sigma$ low realization.}
 
 
 \subsection{DDF Season Length}
