even more plots

--- a/SMTN-017.tex
+++ b/SMTN-017.tex
@@ -24,11 +24,11 @@
 \input{body}
 
 
-\appendix
+% \appendix
 
 % Include all the relevant bib files.
 % https://lsst-texmf.lsst.io/lsstdoc.html#bibliographies
-\section{References} \label{sec:bib}
+% \section{References} \label{sec:bib}
 \bibliographystyle{yahapj}
 \bibliography{local}
 
