--- a/body.tex
+++ b/body.tex
@@ -124,7 +124,7 @@ Looks like we don't really have a metric that is sensitive to increasing $u$-dep
 \epsscale{0.6}
 \plotone{plots/rolling_bulge.pdf}
 \epsscale{1}
-\caption{Rolling in the bulge area. No significant gains, and it can hurt microlensing. \label{fig:rolling_more}}
+\caption{Rolling in the bulge area. No significant gains, and it can hurt microlensing. \label{fig:rolling_bulge}}
 \end{figure}
 
 We test rolling with different fractions of the sky (half, third, sixth), and two different strengths (50\% and 90\%). 
@@ -193,7 +193,7 @@ xxx--Varying the amount of time spent in the plane. This may be obsolete now wit
 
 \begin{figure}
 \plottwo{plots/vary_nes_mags.pdf}{plots/vary_nes_mags2.pdf}
-\caption{Results from varying the amount of time spent in the NES. Left plot shows NES fractions lower than the baseline, right panel shows NES fractions larger than the baseline.\label{fig:vary_nes}}
+\caption{Results from varying the amount of time spent in the NES. Left plot shows NES fractions lower than the baseline, right panel shows NES fractions larger than the baseline.\label{fig:vary_nes_mags}}
 \end{figure}
 
 
