--- a/plots/v20.ipynb
+++ b/plots/v20.ipynb
@@ -656,7 +656,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8df66ce6a0>]"
+       "[<matplotlib.lines.Line2D at 0x7fc2f678fd00>]"
       ]
      },
      "execution_count": 7,
@@ -1994,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 50,
    "id": "69213787",
    "metadata": {},
    "outputs": [
@@ -2104,8 +2104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "id": "fcecfa64",
+   "execution_count": 54,
+   "id": "48069df4",
    "metadata": {},
    "outputs": [
     {
@@ -2141,8 +2141,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "id": "0bfc24ad",
+   "execution_count": 55,
+   "id": "f252d04b",
    "metadata": {},
    "outputs": [
     {
@@ -2180,8 +2180,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "263eb604",
+   "execution_count": 56,
+   "id": "700c40a8",
    "metadata": {},
    "outputs": [
     {
@@ -2208,7 +2208,7 @@
        " 'Sum EDFS, SNe_zlim  HealpixSubsetSlicer']"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2219,7 +2219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "id": "a871c8da",
    "metadata": {},
    "outputs": [
@@ -2246,7 +2246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "id": "176aa37d",
    "metadata": {},
    "outputs": [
@@ -2273,7 +2273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "id": "96d13c44",
    "metadata": {},
    "outputs": [
@@ -2300,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "id": "19041a6d",
    "metadata": {},
    "outputs": [
@@ -2327,7 +2327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "id": "38d747e8",
    "metadata": {},
    "outputs": [
@@ -2354,7 +2354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "id": "4df60f02",
    "metadata": {},
    "outputs": [
@@ -2382,7 +2382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "id": "8d785e2a",
    "metadata": {},
    "outputs": [
@@ -2409,7 +2409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 64,
    "id": "c09057ee",
    "metadata": {},
    "outputs": [
@@ -2437,7 +2437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 65,
    "id": "b3eb8549",
    "metadata": {},
    "outputs": [
@@ -2662,7 +2662,7 @@
        "vary_nes_nesfrac1.00_v2.0            145.0  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2673,7 +2673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 66,
    "id": "8839d0e2",
    "metadata": {},
    "outputs": [
@@ -2683,7 +2683,7 @@
        "Text(0, 0.5, 'OCC_r5, H=16')"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2777,7 +2777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 67,
    "id": "58ebc351",
    "metadata": {},
    "outputs": [
@@ -2804,7 +2804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 68,
    "id": "830ba85d",
    "metadata": {},
    "outputs": [
@@ -2831,7 +2831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 69,
    "id": "94d2419d",
    "metadata": {},
    "outputs": [
@@ -2866,7 +2866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 70,
    "id": "3b343790",
    "metadata": {},
    "outputs": [
@@ -2893,7 +2893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 71,
    "id": "39a41301",
    "metadata": {},
    "outputs": [
@@ -2920,7 +2920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 72,
    "id": "26d8da0d",
    "metadata": {},
    "outputs": [
@@ -2947,7 +2947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 73,
    "id": "483a3044",
    "metadata": {},
    "outputs": [
@@ -2974,7 +2974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
    "id": "d67d8d9a",
    "metadata": {},
    "outputs": [
@@ -3017,7 +3017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
    "id": "3a464b0b",
    "metadata": {},
    "outputs": [
@@ -3047,7 +3047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 76,
    "id": "0fb2e13b",
    "metadata": {},
    "outputs": [
@@ -3168,7 +3168,7 @@
        "presto_gap4.0_mix_v2.0  24.701756  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3179,17 +3179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "id": "fcb2bb41",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f8e007da8e0>"
+       "<matplotlib.legend.Legend at 0x7fc2e5f00250>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3227,7 +3227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 78,
    "id": "51f9a0ca",
    "metadata": {},
    "outputs": [
@@ -3254,7 +3254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 79,
    "id": "544d825b",
    "metadata": {},
    "outputs": [
@@ -3460,7 +3460,7 @@
        "twilight_neo_nightpattern7v2.0  178.0            155.0  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3471,7 +3471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 80,
    "id": "48856050",
    "metadata": {},
    "outputs": [
@@ -3481,7 +3481,7 @@
        "'\\\\begin{tabular}{lrrrrrrrrrrrr}\\n\\\\toprule\\n{} &  parallax &  proper motion &  fast microlensing &  slow microlensing &  fO N vis &  NEO bright &  NEO faint &     TNO &        SNe &        3x2 &     WL &  Transients, KNe \\\\\\\\\\n\\\\midrule\\nbaseline\\\\_v2.0                  &  0.791058 &       0.184088 &             0.1580 &             0.4284 &     839.0 &      0.9298 &     0.3788 &  0.6480 &  25374.969 &  37.908126 &  186.0 &            179.0 \\\\\\\\\\ntwilight\\\\_neo\\\\_nightpattern1v2.0 &  0.875151 &       0.196896 &             0.1590 &             0.4422 &     730.0 &      0.9810 &     0.3362 &  0.6468 &  20953.825 &  33.789185 &  161.0 &            138.0 \\\\\\\\\\ntwilight\\\\_neo\\\\_nightpattern2v2.0 &  0.834827 &       0.190420 &             0.1516 &             0.4470 &     785.0 &      0.9752 &     0.3662 &  0.6460 &  23844.679 &  35.845149 &  173.0 &            139.0 \\\\\\\\\\ntwilight\\\\_neo\\\\_nightpattern3v2.0 &  0.816851 &       0.187588 &             0.1618 &             0.4504 &     803.0 &      0.9696 &     0.3724 &  0.6484 &  24760.890 &  36.676457 &  178.0 &            155.0 \\\\\\\\\\ntwilight\\\\_neo\\\\_nightpattern4v2.0 &  0.816124 &       0.187829 &             0.1634 &             0.4545 &     813.0 &      0.9618 &     0.3728 &  0.6492 &  25056.156 &  37.191955 &  179.0 &            148.0 \\\\\\\\\\ntwilight\\\\_neo\\\\_nightpattern5v2.0 &  0.833112 &       0.190596 &             0.1617 &             0.4509 &     784.0 &      0.9756 &     0.3638 &  0.6496 &  23049.196 &  36.176128 &  173.0 &            150.0 \\\\\\\\\\ntwilight\\\\_neo\\\\_nightpattern6v2.0 &  0.826466 &       0.189733 &             0.1630 &             0.4494 &     791.0 &      0.9750 &     0.3640 &  0.6456 &  24115.741 &  36.272295 &  174.0 &            141.0 \\\\\\\\\\ntwilight\\\\_neo\\\\_nightpattern7v2.0 &  0.823417 &       0.189163 &             0.1611 &             0.4502 &     803.0 &      0.9714 &     0.3638 &  0.6508 &  24451.653 &  36.768819 &  178.0 &            155.0 \\\\\\\\\\n\\\\bottomrule\\n\\\\end{tabular}\\n'"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3492,7 +3492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 81,
    "id": "fc623c1a",
    "metadata": {},
    "outputs": [
@@ -3513,7 +3513,7 @@
        "Name: DifferentialCompleteness H = 17.000000 Discovery_N_Chances Trojan 3 pairs in 15 nights trailing loss MoObjSlicer, Length: 266, dtype: float64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3524,17 +3524,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 82,
    "id": "23006855",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f8e0057f9d0>]"
+       "[<matplotlib.lines.Line2D at 0x7fc2daa880d0>]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     },
