--- a/body.tex
+++ b/body.tex
@@ -13,12 +13,14 @@
 {\bf Faint NEOs}: Fraction of NEO objects with H=22 recovered. Note this metric can have significant variations due to shot noise.\\
 {\bf TNOs}: Fraction of H=6.0 Trans Neptunian Objects discovered.  \\
 {\bf SNe}: The number of type Ia supernovae that are observed up to the redshift completeness limit. \\
+{\bf SNe, zlim}: The redshift completeness limit for Ia SNe. \\
 {\bf 3x2}: Figure of merit for the 3x2 correlation. Only uses i-band. \\
 {\bf Weak Lensing}: Number of visits in i-band that are suitable for weak lensing observations, includes an extinction cut. \\
 {\bf Transients, KNe}: The PrestoKNe metric. This metric generates 10,000 events. Unfortunately, in the baseline only around 400 of the events are detected, so we expect a run-to-run shot noise of ~5\%. The metric returns two scores ("P" and "S") which are highly correlated.  \\
 {\bf XRB}: X-ray binary events. This metric generates 10,000 events, and here we check how many pass the early detection criteria. \\
 {\bf Brown Dwarf}:  This metric computes the volume we can detect L7 Brown Dwarfs in. Because brown drawfs are very red objects, this metric will be mostly sensitive to depth in the $izy$\ filters.\\
 
+The raw metric values are output at the end of this jupyter notebook: \url{https://github.com/lsst-sims/smtn-017/blob/main/plots/v20.ipynb}
 
 \subsection{DDF metrics}
 
