--- a/body.tex
+++ b/body.tex
@@ -339,6 +339,31 @@ virgo\_cluster:  Adding the Virgo cluster to the WFD footprint. This was such a 
 
 \section{v2.1 Runs}
 
+\subsection{Baseline}
+
+\begin{figure}
+\plottwo{plots/map_labels.pdf}{plots/time_fractions/baseline_v2_1_10yrs_Count_night_note_not_like_DD_HEAL_SkyMap.pdf}
+\caption{The left shows different regions used for the v2.1 baseline. Right shows the resultin number of visits. A breakdown is listed in Table~\ref{table:regions}.}
+\end{figure}
+
+\begin{table}
+\caption{Number and fraction of visits for the v2.1 baseline. \label{table:regions}}
+\begin{tabular}{lrr}
+      Label &  N visits &  Percent \\
+      \hline
+   (None)    &   16687.1 &     0.80 \\
+    LMC\_SMC &   42291.7 &     2.03 \\
+      bulge &   85322.1 &     4.09 \\
+dusty\_plane &  131940.0 &     6.33 \\
+    lowdust & 1598178.2 &    76.77 \\
+        nes &   89348.5 &     4.29 \\
+        scp &   17371.9 &     0.83 \\
+      virgo &    6647.0 &     0.31 \\
+       DDFs &   93962.0 &     4.51 \\
+\end{tabular}
+\end{table}
+
+
 \subsection{Galactic Plane Runs}
 
 \begin{figure}
