change to cumulative on SS objects

--- a/body.tex
+++ b/body.tex
@@ -9,9 +9,9 @@
 {\bf Fast Microlensing events}: Fraction of microlensing events between 5 and 10 days in duration that are recovered. \\
 {\bf Slow Microlensing events}: Fraction of microlensing events between 60 and 90 days in duration that are recovered.\\
 {\bf SRD fO value}: The area that reaches 825 visits (all filters). Should be around 18,000 square degrees. \\
-{\bf Bright NEOs}: Fraction of H=16 Near Earth Asteroid objects discovered. \\
-{\bf Faint NEOs}: Fraction of NEO objects with H=22 recovered. Note this metric can have significant variations due to shot noise.\\
-{\bf TNOs}: Fraction of H=6.0 Trans Neptunian Objects discovered.  \\
+{\bf Bright NEOs}: Fraction of H<=16 Near Earth Asteroid objects discovered. \\
+{\bf Faint NEOs}: Fraction of NEO objects with H<=22 recovered.  \\
+{\bf TNOs}: Fraction of H<=6.0 Trans Neptunian Objects discovered.  \\
 {\bf SNe}: The number of type Ia supernovae that are observed up to the redshift completeness limit. \\
 {\bf SNe, zlim}: The redshift completeness limit for Ia SNe. \\
 {\bf 3x2}: Figure of merit for the 3x2 correlation. Only uses i-band. \\
